# effort_feedforward_with_joint_feedback_controller

./: .ci.rosinstall  .travis.yml  CMakeLists.txt  EffortFeedforwardWithJointFeedbackController.xml  README.md  package.xml
.github/workflows/: industrial_ci_action.yml
config/: j2n6s300_control.yaml  j2s6s200_control.yaml
launch/: j2s6s200_control.launch
msg/: EffortFeedforwardWithJointFeedback.msg  EffortFeedforwardWithJointFeedbackTrajectory.msg
src/: EffortFeedforwardWithJointFeedbackController.cpp  JPVTPIDFeedForwardController.cpp
